--- a/less/blocks/_base.less
+++ b/less/blocks/_base.less
@@ -354,20 +354,21 @@ button {
 }
 
 #overlay {
+    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: #616777;
-    z-index: -1;
+    z-index: 3;
     opacity: 0;
     transition: .5s;
 }
 
 #overlay.active {
     opacity: 0.5;
-    z-index: 2;
+    display: block;
 }
 
 #page-nav {
