--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -117,7 +117,7 @@
     font-size: 42px;
     font-weight: 900;
     color: #000;
-    z-index: 4;
+    z-index: 2;
 
     @media (min-width: 1200px) {
         margin-left: 7px;
